# reachy-photo-booth-app

./: .dockerignore  .env.example  .gitignore  .prettierrc  README.md  THIRDPARTYLICENSES  docker-compose.yaml  pyproject.toml
agent-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
agent-service/scripts/: mock_user.py  trigger_agent_restart.py
agent-service/src/: configuration.py  main.py
agent-service/src/configs/: photobooth.yml
agent-service/workflows/photo_booth_agent/: pyproject.toml
animation-compositor-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
animation-compositor-service/scripts/: list_sound_devices.py  plot_debug_positions.py
animation-compositor-service/src/: audio_mixer.py  configuration.py  main.py  models.py  utils.py
animation-compositor-service/src/clips/: animations.py  base_clips.py  procedural_clips.py  static_clips.py
animation-database-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
animation-database-service/assets/: .gitignore
animation-database-service/assets/animLibrary/: .gitignore
animation-database-service/assets/animLibrary/antennaLargeWiggle/: antennaLargeWiggle.blenderAnim  antennaLargeWiggle.json
animation-database-service/assets/animLibrary/antennaSmallWiggle/: antennaSmallWiggle.blenderAnim  antennaSmallWiggle.json
animation-database-service/assets/animLibrary/attentive/: attentive.blenderAnim  attentive.json
animation-database-service/assets/animLibrary/focus/: focus.blenderAnim  focus.json
animation-database-service/assets/animLibrary/idle3old/: idle3old.blenderAnim  idle3old.json
animation-database-service/assets/animLibrary/intrigued5/: intrigued5.blenderAnim  intrigued5.json
animation-database-service/assets/animLibrary/listen1/: listen1.blenderAnim  listen1.json
animation-database-service/assets/animLibrary/lookAroundShort/: lookAroundShort.blenderAnim  lookAroundShort.json
animation-database-service/assets/animLibrary/nod/: nod.blenderAnim  nod.json
animation-database-service/assets/animLibrary/picturePreparation/: picturePreparation.blenderAnim  picturePreparation.json
animation-database-service/assets/animLibrary/scan/: scan.blenderAnim  scan.json
animation-database-service/assets/animLibrary/sleep3/: sleep3.blenderAnim  sleep3.json
animation-database-service/assets/animLibrary/takePicture/: takePicture.blenderAnim  takePicture.json
animation-database-service/assets/animLibrary/talking/: talking.blenderAnim  talking.json
animation-database-service/assets/animLibrary/talkingLeftShoulder/: talkingLeftShoulder.blenderAnim  talkingLeftShoulder.json
animation-database-service/assets/animLibrary/talkingRightShoulder/: talkingRightShoulder.blenderAnim  talkingRightShoulder.json
animation-database-service/assets/animLibrary/wakeUp1/: wakeUp1.blenderAnim  wakeUp1.json
animation-database-service/scripts/: .gitignore  test_clips.py  test_procedural_audio.py
animation-database-service/src/: cache.py  configuration.py  easing_curves.py  main.py  models.py  utils.py
animation-database-service/src/audio/: README.md  __init__.py  audio_conversion.py  audio_debug.py  audio_engine.py  audio_utility.py
animation-database-service/src/procedural/: procedural_animations.py  procedural_audio.py
camera-service/: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  worker-debug.override.yaml
camera-service/src/: configuration.py  main.py
docs/: getting-started.md  (+2 more)
interaction-manager-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
interaction-manager-service/data/: robot_utterances.yaml
interaction-manager-service/src/: configuration.py  event_manager.py  light_manager.py  main.py  robot_utterance_manager.py  utils.py
interaction-manager-service/src/robots/: photo_booth_bot.py  robot_state_machine.py
metrics-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
metrics-service/src/: configuration.py  main.py
remote-control-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
remote-control-service/src/: index.html  main.py
robot-controller-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
robot-controller-service/data/: hardware_config.yaml
robot-controller-service/scripts/: extract_positions.py  play_positions.py  speaker_setup.sh
robot-controller-service/src/: configuration.py  main.py  utils.py
speech-to-text-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
speech-to-text-service/scripts/: trigger_stt.py
speech-to-text-service/src/: configuration.py  main.py  microphone.py  utils.py
tests/: README.md  conftest.py  pyproject.toml  pytest.ini
tests/src/: guardrails_dataset.py  main.py  test_agent.py  test_text_to_speech.py  test_utils.py
text-to-speech-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
text-to-speech-service/scripts/: cache_kokoro_model_and_voices.py  trigger_tts.py
text-to-speech-service/src/: configuration.py  main.py
text-to-speech-service/src/models/: base_tts_model.py  kokoro_tts.py
tracker-service/: Dockerfile  README.md  compose.yaml  pyproject.toml  service-debug.override.yaml
tracker-service/scripts/: trigger_tracker.py  trigger_user_state.py
tracker-service/src/: configuration.py  constants.py  main.py  state.py
tracker-service/src/helpers/: filters.py  utils.py
tracker-service/src/models/detector/: __init__.py  base.py  byte_track.py  detectron2.py  factory.py
ui-server-service/: Dockerfile  README.md  compose.yaml  index.html  pyproject.toml  service-debug.override.yaml
ui-server-service/src/: camera_track.py  configuration.py  main.py  messages.py  session.py
workmesh/: README.md  pyproject.toml
workmesh/src/workmesh/: __init__.py  config.py  protobuf_utils.py  service.py  service_executor.py  service_telemetry.py
(+68 files in other folders)
