# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "interaction-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10.0",
  "statesman>=1.0.5",
  "workmesh",
]

[tool.uv.sources]
workmesh = { workspace = true }
