# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "robot-controller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.15.0",
    "numpy>=2.2.6",
    "workmesh",
    "reachy-mini==1.1.4",
]

[dependency-groups]
dev = [
    "reachy-mini[mujoco]==1.1.4",
]

[tool.uv.sources]
workmesh = { workspace = true }
