# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "photo-booth-agent"
version = "0.1.0"
dependencies = [
    "minio>=7.2.18",
    "qrcode[pil]>=8.2",
    "regex>=2024.0.0",
    "nvidia-nat[langchain]==1.3.1",
]
requires-python = ">=3.11,<3.13"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"


[project.entry-points.'nat.components']
photo_booth = "photo_booth_agent.register"
